k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: bankapp-namespace
  labels:
    name: bankapp-namespace
